--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 , "dependencies"  : { "coffee-script" : ">=1.0.1"
                     , "jasmine-reporters" : "0.1.0"
                     , "requirejs" : ">=0.27.1"
-                    , "findit" : ">= 0.1.2"
+                    , "findit" : "git://github.com/e-conomic/node-findit.git"
                     }
 , "bin"           : "bin/jasmine-node"
 , "main"          : "lib/jasmine-node"
